# pyepggrab

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  runner dev.yaml  runner publish.yaml  test.yaml
example/: README.md
example/cc_example/: cc_example.py
pyepggrab/: __about__.py  __init__.py  args.py  ask.py  configbase.py  configmanager.py  log.py  pyepggrab.py  utils.py  xmltv.py  xmlwriter.py
pyepggrab/grabbers/: __init__.py
pyepggrab/grabbers/hu_porthu/: README.md  __init__.py  catmap.py  config.py  hu_porthu.py  request_proc.py  use_ip_adapter.py  utils.py  xml_utils.py
tests/: __init__.py
tests/test_hu_porthu/: test_configfile.py  test_program_list_parsing.py
tests/test_hu_porthu/testdata/: README.md  daystart_dayend.json  episode-1839440.html  episode-1839440.json  episode-3042606.html  episode-3042606.json  movie-256363.html  movie-256363.json  movie.html  movie.json  radio.json  series.html  series.json  space_country.json
tests/test_pyepggrab/: test_xmltv_parsing.py
tests_live/: __init__.py
tests_live/test_live_hu_porthu/: test_live_hu_porthu.py
tests_live/test_live_hu_porthu/testdata/: testconfig.conf  testconfig_radio.conf
